Bug 1256084 - Don't force reflow on size mode change. r=heycam